# ComfyUI_InstantIR_Wrapper

./: InstantIR_node.py  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py  workflow.json
config_files/: IR_dataset.yaml  losses.yaml  val_dataset.yaml
data/: data_config.py
losses/: losses.py
module/: attention.py  min_sdxl.py
module/diffusers_vae/: autoencoder_kl.py  vae.py
module/unet/: unet_2d_ZeroSFT.py  unet_2d_ZeroSFT_blocks.py
pipelines/: sdxl_instantir.py  stage1_sdxl_pipeline.py
utils/: degradation_pipeline.py  train_utils.py  utils.py
